--- a/examples/diode/ideal_diode.ipynb
+++ b/examples/diode/ideal_diode.ipynb
@@ -350,7 +350,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
