--- a/paper/Manuscript.tex
+++ b/paper/Manuscript.tex
@@ -43,37 +43,47 @@ Target journal: Computer Physics Communications\end{abstract}
 \section*{Introduction}
  motivation (within PV and beyond) citing examples of our application of this idea so far (Joule paper and PVSC proceeding) 
 \section*{Model}
- \begin{itemize}\item background on Bayes theorem \item particulars about how it can be applied to fitting problems we're interested in \item advantages over traditional fitting approaches \item figure 1 \end{itemize}  
+ \begin{itemize}
+ \item background on Bayes theorem
+ \item particulars about how it can be applied to fitting problems we're interested in
+ \item advantages over traditional fitting approaches
+ \item figure 1
+ \end{itemize}
+  
 \begin{figure}[!ht]
 
 \subfloat[\label{Fig:10a}]
-{\includegraphics[width=0.48\columnwidth]{./figure_1a.png}}
+{\includegraphics[width=0.48\columnwidth]{././figure_1a.png}}
 \hfill
 \subfloat[\label{Fig:10b}]
-{\includegraphics[width=0.48\columnwidth]{./figure_1b.png}}
+{\includegraphics[width=0.48\columnwidth]{././figure_1b.png}}
 \caption{(a) Scheme (b) Probability}
 \end{figure}
 
 \section*{Software Architecture and Interface}
  \begin{itemize}\item description of structure of new code and workflow for using it (both Python scripting and command-line) \item figure 2 \end{itemize}  \begin{figure}
-{\includegraphics[width=0.7\columnwidth]{./figure_2.png}}
+{\includegraphics[width=0.7\columnwidth]{././figure_2.png}}
 \caption{Bayesian workflow}
 \end{figure}
 \section*{Application Examples}
- \subsection{Ideal Diode Model} \begin{itemize}\item validation example - ``observed'' data is just generated using the model and we show we can recover the correct input parameters \item figure 3 showing PMF (animation in ESI) \end{itemize}  \begin{figure}
-{\includegraphics[width=0.7\columnwidth]{./figure_3.png}}
+ \subsection{Ideal Diode Model}
+  \begin{itemize}\item validation example - ``observed'' data is just generated using the model and we show we can recover the correct input parameters \item figure 3 showing PMF (animation in ESI) \end{itemize}  \begin{figure}
+{\includegraphics[width=0.7\columnwidth]{././figure_3.png}}
 \caption{Ideal diode}
-\end{figure}\subsection{Example with Real Data} \begin{itemize}\item more practical example - probably fitting resistive diode to the same SnS data we used in the Joule paper \item figure 4 showing PMF (animation in ESI) and comparison of JV curves \end{itemize}  
+\end{figure}\subsection{Example with Real Data}
+  \begin{itemize}\item more practical example - probably fitting resistive diode to the same SnS data we used in the Joule paper \item figure 4 showing PMF (animation in ESI) and comparison of JV curves \end{itemize}  
 \begin{figure}[!ht]
 
 \subfloat[\label{Fig:40a}]
-{\includegraphics[width=0.48\columnwidth]{./figure_4a.png}}
+{\includegraphics[width=0.48\columnwidth]{././figure_4a.png}}
 \hfill
 \subfloat[\label{Fig:40b}]
-{\includegraphics[width=0.48\columnwidth]{./figure_4b.png}}
+{\includegraphics[width=0.48\columnwidth]{././figure_4b.png}}
 \caption{Real data}
 \end{figure}
-\subsection{Maybe an example with a numerical model like PC1D} \subsection{Maybe a non-PV example} thermoelectrics? TIDLS? 
+\subsection{Maybe an example with a numerical model like PC1D}
+  \subsection{Maybe a non-PV example}
+  thermoelectrics? TIDLS? 
 \section*{Conclusions}
  
 \section*{Acknowledgements}
