--- a/paper/Manuscript.tex
+++ b/paper/Manuscript.tex
@@ -10,6 +10,7 @@
 \renewcommand{\thesubfigure}{(\alph{subfigure})}
 \usepackage{listings}
 \usepackage{mathtools}
+\usepackage{todonotes}
 \usepackage{amsmath}
 \usepackage{chngcntr}
 \usepackage{bm}
@@ -71,7 +72,7 @@ Target journal: Computer Physics Communications\end{abstract}
 {\includegraphics[width=0.7\columnwidth]{././figure_3.png}}
 \caption{Ideal diode}
 \end{figure}\subsection{Example with Real Data}
-  \begin{itemize}\item more practical example - probably fitting resistive diode to the same SnS data we used in the Joule paper \item figure 4 showing PMF (animation in ESI) and comparison of JV curves \end{itemize}  
+  \begin{itemize}\item more practical example - probably fitting resistive diode to the same SnS data we used in the Joule paper \item figure 4 showing PMF (animation in ESI) and comparison of JV curves \end{itemize} \todo[inline]{example fgryer2qt rt r}  
 \begin{figure}[!ht]
 
 \subfloat[\label{Fig:40a}]
