--- a/examples/diode/ideal_diode.ipynb
+++ b/examples/diode/ideal_diode.ipynb
@@ -1230,6 +1230,114 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Bp</th>\n",
+       "      <th>J</th>\n",
+       "      <th>T</th>\n",
+       "      <th>V</th>\n",
+       "      <th>deltas</th>\n",
+       "      <th>error</th>\n",
+       "      <th>n</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>11.220185</td>\n",
+       "      <td>-0.03</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.025</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>11.220185</td>\n",
+       "      <td>-0.03</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.025</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>11.220185</td>\n",
+       "      <td>-0.03</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.025</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>11.220185</td>\n",
+       "      <td>-0.03</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.025</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>11.220185</td>\n",
+       "      <td>-0.03</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.025</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Bp     J      T     V  deltas  error      n\n",
+       "0  11.220185 -0.03  150.0  0.00     0.0    0.0  1.025\n",
+       "1  11.220185 -0.03  150.0  0.05     0.0    0.0  1.025\n",
+       "2  11.220185 -0.03  150.0  0.10     0.0    0.0  1.025\n",
+       "3  11.220185 -0.03  150.0  0.15     0.0    0.0  1.025\n",
+       "4  11.220185 -0.03  150.0  0.20     0.0    0.0  1.025"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m.model_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
