fixed attaching model data when param vals span 0

--- a/examples/TE/TE.ipynb
+++ b/examples/TE/TE.ipynb
@@ -35,7 +35,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "celldata = {}\n",
@@ -55,7 +57,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "test_in = [-2.499946233286e1,1.833885014595e-3,-2.2588468610036e-3,8.6217332036812e-4]\n",
@@ -74,7 +78,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There is an average of a -3.27% difference (with a standard deviation of 0.05%) between the Matlab and Python implementations in the y output.\n"
+      "There is an average of a 0.27% difference (with a standard deviation of 0.00%) between the Matlab and Python implementations in the y output.\n"
      ]
     }
    ],
@@ -92,7 +96,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There is an average of a -1.65% difference (with a standard deviation of 0.03%) between the Matlab and Python implementations in the S output.\n"
+      "There is an average of a 0.13% difference (with a standard deviation of 0.00%) between the Matlab and Python implementations in the S output.\n"
      ]
     }
    ],
@@ -161,7 +165,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "fp = byp.param_list()\n",
@@ -187,7 +193,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ec = ['T','R','n']"
@@ -203,7 +211,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "m = bym.model(params=fp,ec=ec,output_var='P')"
@@ -249,7 +259,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#m.list_model_pts_to_run('./sim_list.h5')"
@@ -267,7 +279,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#sim_list = dd.io.load('./sim_list.h5')\n",
@@ -278,179 +292,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sim_outputs = dd.io.load('sim_outputs.h5')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>P0</th>\n",
-       "      <th>fs</th>\n",
-       "      <th>r</th>\n",
-       "      <th>Z</th>\n",
-       "      <th>n</th>\n",
-       "      <th>T</th>\n",
-       "      <th>R</th>\n",
-       "      <th>P</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [P0, fs, r, Z, n, T, R, P]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sim_outputs.query('abs(-8.000000-Z)/Z<1e-6 & abs(0.000000-P0)/P0<1e-6 & abs(-0.700000-fs)/fs<1e-6 & abs(-0.700000-r)/r<1e-6')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "abs(-8.000000-Z)/Z<1e-6 & abs(0.000000-P0)/P0<1e-6 & abs(-0.700000-fs)/fs<1e-6 & abs(-0.700000-r)/r<1e-6\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "index 0 is out of bounds for axis 0 with size 0",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-14-62a1be9804ad>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mattach_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'file'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mfpath\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'sim_outputs.h5'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/Users/rachelkurchin/Dropbox (MIT)/MIT/Bayes_Project/bayesim/bayesim/model.py\u001b[0m in \u001b[0;36mattach_model\u001b[0;34m(self, **argv)\u001b[0m\n\u001b[1;32m    304\u001b[0m                 \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mquery_str\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    305\u001b[0m                 \u001b[0msubset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mquery_str\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 306\u001b[0;31m                 \u001b[0mstart_ind\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msubset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    307\u001b[0m                 \u001b[0mend_ind\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msubset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    308\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstart_indices\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstart_ind\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/anaconda/lib/python2.7/site-packages/pandas/core/indexes/base.pyc\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   1741\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1742\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mis_scalar\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1743\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mgetitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1744\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1745\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mslice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: index 0 is out of bounds for axis 0 with size 0"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "m.attach_model(mode='file',fpath='sim_outputs.h5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'edges': array([  1.00000000e-34,   1.00000000e-32,   1.00000000e-30,\n",
-       "           1.00000000e-28,   1.00000000e-26,   1.00000000e-24,\n",
-       "           1.00000000e-22,   1.00000000e-20]),\n",
-       "  'length': 7,\n",
-       "  'min_width': 1.5848931924611134,\n",
-       "  'name': 'P0',\n",
-       "  'spacing': 'log',\n",
-       "  'units': 'sec.',\n",
-       "  'val_range': [1e-34, 1e-20],\n",
-       "  'vals': array([  1.00000000e-33,   1.00000000e-31,   1.00000000e-29,\n",
-       "           1.00000000e-27,   1.00000000e-25,   1.00000000e-23,\n",
-       "           1.00000000e-21])},\n",
-       " {'edges': array([-1. , -0.4,  0.2,  0.8,  1.4,  2. ]),\n",
-       "  'length': 5,\n",
-       "  'min_width': 0.06,\n",
-       "  'name': 'fs',\n",
-       "  'spacing': 'linear',\n",
-       "  'units': 'eV',\n",
-       "  'val_range': [-1, 2],\n",
-       "  'vals': array([-0.7, -0.1,  0.5,  1.1,  1.7])},\n",
-       " {'edges': array([-1. , -0.4,  0.2,  0.8,  1.4,  2. ]),\n",
-       "  'length': 5,\n",
-       "  'min_width': 0.06,\n",
-       "  'name': 'r',\n",
-       "  'spacing': 'linear',\n",
-       "  'units': 'unitless',\n",
-       "  'val_range': [-1, 2],\n",
-       "  'vals': array([-0.7, -0.1,  0.5,  1.1,  1.7])},\n",
-       " {'edges': array([-10.,  -6.,  -2.,   2.,   6.,  10.]),\n",
-       "  'length': 5,\n",
-       "  'min_width': 0.4,\n",
-       "  'name': 'Z',\n",
-       "  'spacing': 'linear',\n",
-       "  'units': 'unitless',\n",
-       "  'val_range': [-10, 10],\n",
-       "  'vals': array([-8., -4.,  0.,  4.,  8.])}]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "m.fit_params"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py36",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "py36"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
